--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,16 @@
+html {
+  height: 100%
+}
+
 body {
-  padding: 50px;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+#map-canvas {
+  height: 100%
 }
 
 a {
