--- a/views/layout.html
+++ b/views/layout.html
@@ -3,8 +3,28 @@
   <head>
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap-theme.css">
+    <script type="text/javascript" src="../bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ-e08fJ7iflkfhiCDe_2vxUMzvivjMZQ&sensor=true"></script>
+    <script type="text/javascript">
+      function initialize() {
+        var mapOptions = {
+          center: new google.maps.LatLng(-34.397, 150.644),
+          zoom: 8
+        };
+        var map = new google.maps.Map(document.getElementById("map-canvas"),
+            mapOptions);
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+
   </head>
+
   <body>
     {% block content %}{% endblock %}
+    <div id="map-canvas"></div>
   </body>
 </html>
