--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h1>{{title}}</h1>
+<!--   <h1>{{title}}</h1>
   <ul>
       {% for hotel in hotels %}
       <li>{{hotel.name}}</li>
@@ -12,17 +12,19 @@
       {% for restaurant in restaurants %}
       <li>{{restaurant.name}}</li>
       {%  endfor %}
-  </ul>
+  </ul> -->
 
+<nav class="navbar navbar-inverse navbar-fixed-top"></nav>
 
+<div id="map-canvas"></div>
 
-  <script>
+<script>
 
-    {% autoescape false %}
-    var all_hotels = {{ hotels | json }};
-    var all_restaurants = {{ restaurants | json }};
-    var all_things_to_do = {{ things_to_do | json }};
-    {% endautoescape %}
+  {% autoescape false %}
+  var all_hotels = {{ hotels | json }};
+  var all_restaurants = {{ restaurants | json }};
+  var all_things_to_do = {{ things_to_do | json }};
+  {% endautoescape %}
 
-  </script>
+</script>
 {% endblock %}
