--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,11 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <a class="navbar-brand" href="#">Trip Planner</a>
   <div class="navbar-left">
+    <ul id="tripDays" class="nav navbar-nav">
+          <!-- Days append here -->
+    </ul>
+  </div>
+  <div class="navbar-right">
     <ul class="nav navbar-nav">
       <li><a href="/">Home</a></li>
       <li><a href="#">About</a></li>
@@ -18,43 +23,40 @@
     <div id="dropDowns">
       <div class="col-lg-3">
         <button id="newDay" class="btn btn-primary">ADD DAY</button>
-        <div id="tripDays" class="btn-group">
-          <!-- Days append here -->
-        </div>
       </div>
       <div class="col-lg-3">
         <form class="form-inline" method="post" action="******">
-          <label for="hotelDropdown">HOTELS</label>
+          <h3>HOTELS</h3>
           <select class="form-control" id="hotelDropdown">
             {% for hotel in hotels %}
               <option value="{{hotel.id}}">{{hotel.name}}</option>
             {% endfor %}
           </select>
-          <button class="btn btn-primary" type="#">ADD</button>
+          <button data-select="hotels" id="addHotel" class="btn btn-primary addBtn" type="#">ADD</button>
         </form>
       </div>
 
       <div class="col-lg-3">
         <form class="form-inline" method="post" action="******">
-          <label for="toDoDropdown">Things to do</label>
+          <h3>Things to do</h3>
           <select class="form-control" id="toDoDropdown">
             {% for thingsToDo in thingsToDos %}
               <option value="{{thingsToDo.id}}">{{thingsToDo.name}}</option>
             {% endfor %}
           </select>
-          <button class="btn btn-primary" type="#">ADD</button>
+          <button data-select="thingsToDo" id="addThing" class="btn btn-primary addBtn" type="#">ADD</button>
         </form>
       </div>
 
       <div class="col-lg-3">
         <form class="form-inline" method="post" action="******">
-          <label for="restaurantDropdown">Restaurants</label>
+          <h3>Restaurants</h3>
           <select class="form-control" id="restaurantDropdown">
             {% for restaurant in restaurants %}
               <option value="{{restaurant.id}}">{{restaurant.name}}</option>
             {% endfor %}
           </select>
-          <button class="btn btn-primary" type="#">ADD</button>
+          <button data-select="restaurants" id="addRestaurant" class="btn btn-primary addBtn" type="#">ADD</button>
         </form>
       </div>
     </div>
@@ -63,14 +65,15 @@
 
 <div class="row">
   <div class="col-lg-4">
-<!--     <p>Plan will go here</p>
-    <p>Plan will go here</p>
-    <p>Plan will go here</p>
-    <p>Plan will go here</p>
-    <p>Plan will go here</p>
-    <p>Plan will go here</p>
-    <p>Plan will go here</p>
-    <p>Plan will go here</p> -->
+    <div id="plan">
+      <h3>Plan for Day #</h3>
+        <h4>Hotel</h4>
+          <ul id="hotelList"></ul>
+        <h4>Things to do</h4>
+          <ul id="thingsList"></ul>
+        <h4>Restaurants</h4>
+          <ul id="restaurantsList"></ul>
+    </div>
   </div>
   <div class="col-lg-8">
     <div id="map-canvas"></div>
@@ -82,7 +85,8 @@
   {% autoescape false %}
   var all_hotels = {{ hotels | json }};
   var all_restaurants = {{ restaurants | json }};
-  var all_things_to_do = {{ things_to_do | json }};
+  var all_things_to_do = {{ thingsToDos | json }};
+  var all_days = {{ days | json }};
   {% endautoescape %}
 
 </script>
