Refactored code. Plan list now populates from day object. still a few bugs

--- a/views/index.html
+++ b/views/index.html
@@ -66,13 +66,7 @@
 <div class="row">
   <div class="col-lg-4">
     <div id="plan">
-      <h3>Plan for Day #</h3>
-        <h4>Hotel</h4>
-          <ul id="hotelList"></ul>
-        <h4>Things to do</h4>
-          <ul id="thingsList"></ul>
-        <h4>Restaurants</h4>
-          <ul id="restaurantsList"></ul>
+      <!-- Day plan will append here -->
     </div>
   </div>
   <div class="col-lg-8">
